Fix popup text wrapping: reset white-space: nowrap inherited from module-tab

--- a/css/layout.css
+++ b/css/layout.css
@@ -72,6 +72,7 @@
 
 /* Module preview popup */
 .module-preview {
+  white-space: normal;
   display: none;
   position: fixed;
   top: 58px;
